// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Check dark page against snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      >
        <div
          class="pf-v6-c-page__sidebar-body"
        >
          Navigation
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Check page horizontal layout example against snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Check page to verify breadcrumb is created - PageBreadcrumb syntax 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-breadcrumb"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            <nav
              aria-label="Breadcrumb"
              class="pf-v6-c-breadcrumb"
              data-ouia-component-id="OUIA-Generated-Breadcrumb-:r3:"
              data-ouia-component-type="PF6/Breadcrumb"
              data-ouia-safe="true"
            >
              <ol
                class="pf-v6-c-breadcrumb__list"
                role="list"
              >
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  Section Home
                </li>
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  <span
                    class="pf-v6-c-breadcrumb__item-divider"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                      />
                    </svg>
                  </span>
                  <a
                    class="pf-v6-c-breadcrumb__link"
                    href="#"
                  >
                    Section Title
                  </a>
                </li>
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  <span
                    class="pf-v6-c-breadcrumb__item-divider"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                      />
                    </svg>
                  </span>
                  <a
                    class="pf-v6-c-breadcrumb__link"
                    href="#"
                  >
                    Section Title
                  </a>
                </li>
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  <span
                    class="pf-v6-c-breadcrumb__item-divider"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                      />
                    </svg>
                  </span>
                  <a
                    aria-current="page"
                    class="pf-v6-c-breadcrumb__link pf-m-current"
                    href="#"
                  >
                    Section Landing
                  </a>
                </li>
              </ol>
            </nav>
          </div>
        </section>
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Check page to verify breadcrumb is created 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-breadcrumb"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            <div
              class="pf-v6-c-page__main-body"
            >
              <nav
                aria-label="Breadcrumb"
                class="pf-v6-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-:r0:"
                data-ouia-component-type="PF6/Breadcrumb"
                data-ouia-safe="true"
              >
                <ol
                  class="pf-v6-c-breadcrumb__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    Section Home
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      aria-current="page"
                      class="pf-v6-c-breadcrumb__link pf-m-current"
                      href="#"
                    >
                      Section Landing
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
          </div>
        </section>
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Check page to verify grouped nav and breadcrumb - new components syntax 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <div
          class="pf-v6-c-page__main-group pf-m-sticky-bottom"
        >
          <section
            class="pf-v6-c-page__main-breadcrumb"
          >
            <div
              class="pf-v6-c-page__main-body"
            >
              <nav
                aria-label="Breadcrumb"
                class="pf-v6-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-:r6:"
                data-ouia-component-type="PF6/Breadcrumb"
                data-ouia-safe="true"
              >
                <ol
                  class="pf-v6-c-breadcrumb__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    Section Home
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      aria-current="page"
                      class="pf-v6-c-breadcrumb__link pf-m-current"
                      href="#"
                    >
                      Section Landing
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
          </section>
          <nav
            aria-label="Nav"
            class="pf-v6-c-nav pf-m-horizontal pf-m-subnav"
            data-ouia-component-id="OUIA-Generated-Nav-horizontal-subnav-:r8:"
            data-ouia-component-type="PF6/Nav"
            data-ouia-safe="true"
          >
            <ul
              class="pf-v6-c-nav__list"
              role="list"
            >
              <li
                class="pf-v6-c-nav__item"
                data-ouia-component-id="OUIA-Generated-NavItem-:ra:"
                data-ouia-component-type="PF6/NavItem"
                data-ouia-safe="true"
              >
                <a
                  aria-current="page"
                  class="pf-v6-c-nav__link pf-m-current"
                >
                  <span
                    class="pf-v6-c-nav__link-text"
                  >
                    System Panel
                  </span>
                </a>
              </li>
              <li
                class="pf-v6-c-nav__item"
                data-ouia-component-id="OUIA-Generated-NavItem-:rb:"
                data-ouia-component-type="PF6/NavItem"
                data-ouia-safe="true"
              >
                <a
                  class="pf-v6-c-nav__link"
                >
                  <span
                    class="pf-v6-c-nav__link-text"
                  >
                    Policy
                  </span>
                </a>
              </li>
              <li
                class="pf-v6-c-nav__item"
                data-ouia-component-id="OUIA-Generated-NavItem-:rc:"
                data-ouia-component-type="PF6/NavItem"
                data-ouia-safe="true"
              >
                <a
                  class="pf-v6-c-nav__link"
                >
                  <span
                    class="pf-v6-c-nav__link-text"
                  >
                    Authentication
                  </span>
                </a>
              </li>
              <li
                class="pf-v6-c-nav__item"
                data-ouia-component-id="OUIA-Generated-NavItem-:rd:"
                data-ouia-component-type="PF6/NavItem"
                data-ouia-safe="true"
              >
                <a
                  class="pf-v6-c-nav__link"
                >
                  <span
                    class="pf-v6-c-nav__link-text"
                  >
                    Network Services
                  </span>
                </a>
              </li>
              <li
                class="pf-v6-c-nav__item"
                data-ouia-component-id="OUIA-Generated-NavItem-:re:"
                data-ouia-component-type="PF6/NavItem"
                data-ouia-safe="true"
              >
                <a
                  class="pf-v6-c-nav__link"
                >
                  <span
                    class="pf-v6-c-nav__link-text"
                  >
                    Server
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Check page to verify grouped nav and breadcrumb - old / props syntax 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <div
          aria-label="test"
          class="pf-v6-c-page__main-group pf-m-sticky-bottom pf-m-shadow-top pf-m-overflow-scroll"
          role="region"
          tabindex="0"
        >
          <div
            class="pf-v6-c-page__main-subnav"
          >
            <div
              class="pf-v6-c-page__main-body"
            >
              <nav
                aria-label="Nav"
                class="pf-v6-c-nav pf-m-horizontal pf-m-subnav"
                data-ouia-component-id="OUIA-Generated-Nav-horizontal-subnav-:rh:"
                data-ouia-component-type="PF6/Nav"
                data-ouia-safe="true"
              >
                <ul
                  class="pf-v6-c-nav__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-:rj:"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      aria-current="page"
                      class="pf-v6-c-nav__link pf-m-current"
                    >
                      <span
                        class="pf-v6-c-nav__link-text"
                      >
                        System Panel
                      </span>
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-:rk:"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                    >
                      <span
                        class="pf-v6-c-nav__link-text"
                      >
                        Policy
                      </span>
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-:rl:"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                    >
                      <span
                        class="pf-v6-c-nav__link-text"
                      >
                        Authentication
                      </span>
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-:rm:"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                    >
                      <span
                        class="pf-v6-c-nav__link-text"
                      >
                        Network Services
                      </span>
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-:rn:"
                    data-ouia-component-type="PF6/NavItem"
                    data-ouia-safe="true"
                  >
                    <a
                      class="pf-v6-c-nav__link"
                    >
                      <span
                        class="pf-v6-c-nav__link-text"
                      >
                        Server
                      </span>
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <section
            class="pf-v6-c-page__main-breadcrumb"
          >
            <div
              class="pf-v6-c-page__main-body"
            >
              <div
                class="pf-v6-c-page__main-body"
              >
                <section
                  class="pf-v6-c-page__main-breadcrumb"
                >
                  <div
                    class="pf-v6-c-page__main-body"
                  >
                    <nav
                      aria-label="Breadcrumb"
                      class="pf-v6-c-breadcrumb"
                      data-ouia-component-id="OUIA-Generated-Breadcrumb-:rp:"
                      data-ouia-component-type="PF6/Breadcrumb"
                      data-ouia-safe="true"
                    >
                      <ol
                        class="pf-v6-c-breadcrumb__list"
                        role="list"
                      >
                        <li
                          class="pf-v6-c-breadcrumb__item"
                        >
                          Section Home
                        </li>
                        <li
                          class="pf-v6-c-breadcrumb__item"
                        >
                          <span
                            class="pf-v6-c-breadcrumb__item-divider"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 20 20"
                              width="1em"
                            >
                              <path
                                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                              />
                            </svg>
                          </span>
                          <a
                            class="pf-v6-c-breadcrumb__link"
                            href="#"
                          >
                            Section Title
                          </a>
                        </li>
                        <li
                          class="pf-v6-c-breadcrumb__item"
                        >
                          <span
                            class="pf-v6-c-breadcrumb__item-divider"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 20 20"
                              width="1em"
                            >
                              <path
                                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                              />
                            </svg>
                          </span>
                          <a
                            class="pf-v6-c-breadcrumb__link"
                            href="#"
                          >
                            Section Title
                          </a>
                        </li>
                        <li
                          class="pf-v6-c-breadcrumb__item"
                        >
                          <span
                            class="pf-v6-c-breadcrumb__item-divider"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 20 20"
                              width="1em"
                            >
                              <path
                                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                              />
                            </svg>
                          </span>
                          <a
                            aria-current="page"
                            class="pf-v6-c-breadcrumb__link pf-m-current"
                            href="#"
                          >
                            Section Landing
                          </a>
                        </li>
                      </ol>
                    </nav>
                  </div>
                </section>
              </div>
            </div>
          </section>
        </div>
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Check page to verify skip to content points to main content region 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    data-testid="page-test-id"
    id="PageId"
  >
    <div
      class="pf-v6-c-skip-to-content"
    >
      <a
        class="pf-v6-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-:rq:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        href="#main-content-page-layout-test-nav"
      >
        <span
          class="pf-v6-c-button__text"
        >
          Skip to Content
        </span>
      </a>
    </div>
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        id="main-content-page-layout-test-nav"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-breadcrumb"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            <div
              class="pf-v6-c-page__main-body"
            >
              <nav
                aria-label="Breadcrumb"
                class="pf-v6-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-:rr:"
                data-ouia-component-type="PF6/Breadcrumb"
                data-ouia-safe="true"
              >
                <ol
                  class="pf-v6-c-breadcrumb__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    Section Home
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      aria-current="page"
                      class="pf-v6-c-breadcrumb__link pf-m-current"
                      href="#"
                    >
                      Section Landing
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
          </div>
        </section>
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Check page vertical layout example against snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      >
        <div
          class="pf-v6-c-page__sidebar-body"
        >
          Navigation
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Sticky bottom breadcrumb on all height breakpoints - PageBreadcrumb syntax 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-breadcrumb pf-m-sticky-bottom-on-sm-height pf-m-sticky-bottom-on-md-height pf-m-sticky-bottom-on-lg-height pf-m-sticky-bottom-on-xl-height pf-m-sticky-bottom-on-2xl-height"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            <nav
              aria-label="Breadcrumb"
              class="pf-v6-c-breadcrumb"
              data-ouia-component-id="OUIA-Generated-Breadcrumb-:r5:"
              data-ouia-component-type="PF6/Breadcrumb"
              data-ouia-safe="true"
            >
              <ol
                class="pf-v6-c-breadcrumb__list"
                role="list"
              >
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  Section Home
                </li>
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  <span
                    class="pf-v6-c-breadcrumb__item-divider"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                      />
                    </svg>
                  </span>
                  <a
                    class="pf-v6-c-breadcrumb__link"
                    href="#"
                  >
                    Section Title
                  </a>
                </li>
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  <span
                    class="pf-v6-c-breadcrumb__item-divider"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                      />
                    </svg>
                  </span>
                  <a
                    class="pf-v6-c-breadcrumb__link"
                    href="#"
                  >
                    Section Title
                  </a>
                </li>
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  <span
                    class="pf-v6-c-breadcrumb__item-divider"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                      />
                    </svg>
                  </span>
                  <a
                    aria-current="page"
                    class="pf-v6-c-breadcrumb__link pf-m-current"
                    href="#"
                  >
                    Section Landing
                  </a>
                </li>
              </ol>
            </nav>
          </div>
        </section>
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Verify sticky bottom breadcrumb on all height breakpoints 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-breadcrumb pf-m-sticky-bottom-on-sm-height pf-m-sticky-bottom-on-md-height pf-m-sticky-bottom-on-lg-height pf-m-sticky-bottom-on-xl-height pf-m-sticky-bottom-on-2xl-height"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            <div
              class="pf-v6-c-page__main-body"
            >
              <nav
                aria-label="Breadcrumb"
                class="pf-v6-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-:r2:"
                data-ouia-component-type="PF6/Breadcrumb"
                data-ouia-safe="true"
              >
                <ol
                  class="pf-v6-c-breadcrumb__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    Section Home
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      aria-current="page"
                      class="pf-v6-c-breadcrumb__link pf-m-current"
                      href="#"
                    >
                      Section Landing
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
          </div>
        </section>
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Verify sticky top breadcrumb on all height breakpoints - PageBreadcrumb syntax 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-breadcrumb pf-m-sticky-top-on-sm-height pf-m-sticky-top-on-md-height pf-m-sticky-top-on-lg-height pf-m-sticky-top-on-xl-height pf-m-sticky-top-on-2xl-height"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            <nav
              aria-label="Breadcrumb"
              class="pf-v6-c-breadcrumb"
              data-ouia-component-id="OUIA-Generated-Breadcrumb-:r4:"
              data-ouia-component-type="PF6/Breadcrumb"
              data-ouia-safe="true"
            >
              <ol
                class="pf-v6-c-breadcrumb__list"
                role="list"
              >
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  Section Home
                </li>
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  <span
                    class="pf-v6-c-breadcrumb__item-divider"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                      />
                    </svg>
                  </span>
                  <a
                    class="pf-v6-c-breadcrumb__link"
                    href="#"
                  >
                    Section Title
                  </a>
                </li>
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  <span
                    class="pf-v6-c-breadcrumb__item-divider"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                      />
                    </svg>
                  </span>
                  <a
                    class="pf-v6-c-breadcrumb__link"
                    href="#"
                  >
                    Section Title
                  </a>
                </li>
                <li
                  class="pf-v6-c-breadcrumb__item"
                >
                  <span
                    class="pf-v6-c-breadcrumb__item-divider"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                      />
                    </svg>
                  </span>
                  <a
                    aria-current="page"
                    class="pf-v6-c-breadcrumb__link pf-m-current"
                    href="#"
                  >
                    Section Landing
                  </a>
                </li>
              </ol>
            </nav>
          </div>
        </section>
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Verify sticky top breadcrumb on all height breakpoints 1`] = `
<DocumentFragment>
  <div
    aria-label="Page layout"
    class="pf-v6-c-page my-page-class"
    id="PageId"
  >
    <header
      class="pf-v6-c-masthead pf-m-display-inline-on-md"
    />
    <div
      aria-hidden="false"
      class="pf-v6-c-page__sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-v6-c-page__sidebar-main"
      />
    </div>
    <div
      class="pf-v6-c-page__main-container"
    >
      <main
        class="pf-v6-c-page__main"
        tabindex="-1"
      >
        <section
          class="pf-v6-c-page__main-breadcrumb pf-m-sticky-top-on-sm-height pf-m-sticky-top-on-md-height pf-m-sticky-top-on-lg-height pf-m-sticky-top-on-xl-height pf-m-sticky-top-on-2xl-height"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            <div
              class="pf-v6-c-page__main-body"
            >
              <nav
                aria-label="Breadcrumb"
                class="pf-v6-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-:r1:"
                data-ouia-component-type="PF6/Breadcrumb"
                data-ouia-safe="true"
              >
                <ol
                  class="pf-v6-c-breadcrumb__list"
                  role="list"
                >
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    Section Home
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="pf-v6-c-breadcrumb__link"
                      href="#"
                    >
                      Section Title
                    </a>
                  </li>
                  <li
                    class="pf-v6-c-breadcrumb__item"
                  >
                    <span
                      class="pf-v6-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                        />
                      </svg>
                    </span>
                    <a
                      aria-current="page"
                      class="pf-v6-c-breadcrumb__link pf-m-current"
                      href="#"
                    >
                      Section Landing
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
          </div>
        </section>
        <section
          class="pf-v6-c-page__main-section"
        >
          <div
            class="pf-v6-c-page__main-body"
          >
            Section with default background
          </div>
        </section>
      </main>
    </div>
  </div>
</DocumentFragment>
`;
